# riconv2

./: .bashrc  .gitignore  provider.py  pyproject.toml  test_classification_modelnet40.py  test_classification_scanobj.py  test_partseg.py  test_semseg.py  train_classification_kitti.py  train_classification_modelnet40.py  train_classification_scanobj.py  train_partseg.py  train_semseg.py
data_utils/: ModelNetDataLoader.py  S3DISDataLoader.py  ScanObjectNNLoader.py  SemKittiDataLoader.py  ShapeNetDataLoader.py  collect_indoor3d_data.py  indoor3d_util.py
models/: riconv2_cls.py  riconv2_part_seg.py  riconv2_sem_seg.py  riconv2_utils.py
models/pointnet2/: pointnet2_utils.py
