[project]
name = "riconv2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Debora Oliveira", email = "debora.oliveira@tum.de"},
]
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "setuptools==69.5.1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
