[project]
name = "riconv2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Debora Oliveira", email = "debora.oliveira@tum.de"},
]
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "setuptools==69.5.1",
    "matplotlib>=3.9.0",
    "click>=8.1.7",
    "joblib>=1.4.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
]
[tool.pdm]
distribution = false
